# SQLcord

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: bot.rs  handler.rs  lib.rs  logging.rs  main.rs  sql_parser.rs  state.rs  utils.rs
src/commands/: mod.rs
src/commands/admin/: debug.rs  mod.rs  perms.rs
src/commands/sql/: delete.rs  explain.rs  insert.rs  mod.rs  select.rs  update.rs  use_.rs
src/commands/sql/create/: db.rs  mod.rs  table.rs
src/commands/sql/drop/: db.rs  mod.rs  table.rs
src/guards/: mod.rs  safety.rs
src/render/: mod.rs  reply.rs  table.rs
src/services/: discord_fs.rs  encode.rs  mod.rs
src/state/: mod.rs
