[package]
name = "SQLcord"
version = "0.1.0"
edition = "2024"

[dependencies]

tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
serenity = { version = "0.12.4", features = ["client", "gateway", "model", "rustls_backend"] }
dotenvy = "0.15.7"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
anyhow = "1.0"
