[package]
name = "sqlcord"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sqlcord"
path = "src/main.rs"

[[bin]]
name = "test_registration"
path = "src/bin/test_registration.rs"

[[bin]]
name = "test_run_functions"
path = "src/bin/test_run_functions.rs"

[[bin]]
name = "test_bot_startup"
path = "src/bin/test_bot_startup.rs"

[dependencies]

tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
serenity = { version = "0.12.4", features = ["client", "gateway", "model", "rustls_backend"] }
dotenvy = "0.15.7"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
anyhow = "1.0"
chrono = "0.4"
