[package]
name = "sqlcord"
version = "0.1.0"
edition = "2024"
authors = ["Nikola Ranđelović <contact@nikolchaa.com>"]
description = "🥏 A Discord bot for executing SQL commands in a fun and educational way."
license = "MIT"
categories = ["bot", "discord", "sql", "database"]
repository = "https://github.com/nikolchaa/sqlcord"

[[bin]]
name = "sqlcord"
path = "src/main.rs"

[dependencies]

tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
serenity = { version = "0.12.4", features = ["client", "gateway", "model", "rustls_backend"] }
dotenvy = "0.15.7"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
anyhow = "1.0"
chrono = "0.4"
